--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev src/index.ts --fix ",
     "start": "node build/index.js",
+    "lint": "ts-standard",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Cristian Rojas <cristian.rojas.d@outlook.com>",
@@ -14,9 +15,16 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "ts-node-dev": "^2.0.0",
+    "ts-standard": "^12.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "express": "4.18.1"
+  },
+  "eslintConfig":{
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "extends": ["./node_modules/ts-standard/eslintrc.json"]
   }
 }
